--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ title: Ewelina Westcott
 #logo: /assets/img/headshot_circle.png
 #description: text below imagge
 show_downloads: false
-#theme: jeckyll-theme-minimal
-remote_theme: pages-themes/cayman@v0.2.0
+theme: jeckyll-theme-minimal
+#remote_theme: pages-themes/cayman@v0.2.0
