--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Ewelina Westcott
-#logo: /assets/img/headshot_circle.png
+logo: /assets/img/headshot_circle.png
 #description: text below imagge
 show_downloads: false
 theme: jeckyll-theme-minimal
